updated core-module dependency, require dev-master
Signed-off-by: Pepijn Olivier <olivier.pepijn@gmail.com>

--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     "composer/installers": "~1.0",
     "pingpong/menus": "2.*@dev",
     "typicms/nestablecollection": "1.1.1",
-    "asgardcms/core-module": "~1.0",
+    "asgardcms/core-module": "dev-master",
     "dimsav/laravel-translatable": "~5.0"
   },
   "require-dev": {
@@ -39,6 +39,10 @@
     {
       "type": "vcs",
       "url": "https://github.com/nWidart/modules"
+    },
+    {
+        "type": "vcs",
+        "url": "git@github.com:bitsoflove/Core.git"
     }
   ],
   "autoload-dev": {
